PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-02-01: - RV plotting failed when a single RV data curve is defined
              because by default the plot is set for *both* RV curves.
              This is understandable, but the notice message indicated that
              there is a problem with data filename formatting. Fixed.
              Many thanks to Ettore Tamajo for pointing this out!
2006-01-31: - DC fitting quickbar did not mark the 2nd spot latitude and
              longitude due to a missing signal handler. Fixed. Many thanks
              to Carla Maceroni for pointing this out!
            - Further code cleaning done in the Spots section: the marked
              adjustment toggles remained active even if the spot was
              removed. Furthermore, the sensitivity of the Quickbar toggles
              was not tied to the spot number. These problems caused
              segfaults if the user was not pedantic enough to turn the
              switches off himself. Fixed.
            - An erroneous memory handling was present in DC window that
              caused arbitrary values of parameters to appear in different
              clist entries. Fixed.
            - PHOEBE 0.29a released! (a bugfix release)
2006-01-26: - PHOEBE segfaulted on some architectures if ^M characters were
              used (DOS/Windows <CR> character). These characters are now
              automatically removed during parsing.
2006-01-24: - Carla Maceroni pointed out obsolete tool-tips and labels that
              contained a reference to WD98 and were thus confusing the user
              about the WD version, which is the latest 2004 version. Fixed.
              Would you believe it: there were more than 15 instances of
              such obsolete labels! :( Sorry for the inconvenience!
            - Filters R and I of the Bessell series are actually Rc and Ic.